cloud-infra-macros/tests/fails/iam_action_unknown_service.rs
use cloud_infra_macros::iam_action;

fn example() {
    let action = iam_action!("fakeservice:GetItem");
}

fn main() {}
