cloud-infra-macros/tests/fails/iam_action_unknown_service.stderr
error: unknown AWS service name: fakeservice
 --> tests/fails/iam_action_unknown_service.rs:4:30
  |
4 |     let action = iam_action!("fakeservice:GetItem");
  |                              ^^^^^^^^^^^^^^^^^^^^^
